# ITMO_Speech_Recognition_Course

./: .gitignore  README.md  pyrightconfig.json
group-projects/gp1/: CONTRACTS.md  README.md  pyproject.toml  requirements.txt
group-projects/gp1/configs/: base.yaml  crdnn.yaml  efficient_conformer.yaml  fast_conformer_bpe.yaml  quartznet_10x4.yaml  quartznet_word_aux.yaml
group-projects/gp1/docs/: architectures.html  uv-flow.html
group-projects/gp1/notebooks/: 01_quartznet.ipynb  02_crdnn.ipynb  03_decode_kenlm.ipynb  03_efficient_conformer.ipynb  04_fast_conformer_bpe.ipynb  05_predict.ipynb  06_decode_kenlm.ipynb  run_colab.ipynb  run_kaggle.ipynb  run_local.ipynb
group-projects/gp1/scripts/: export.py  precompute_audio.py  predict.py  publish_release.sh  smoke_test_all_configs.py  train.py
group-projects/gp1/tests/: conftest.py  helpers.py  test_audio_aug.py  test_audio_aug_gpu.py  test_beam_pyctc.py  test_bpe_vocab_contract.py  test_bucket3_training_loop.py  test_bucket4_error_handling.py  test_bucket5_config_unification.py  test_bucket5_fast_conformer_bpe_budget.py  test_bucket5_model_shapes_all_architectures.py  test_bucket_p1_pitch_fast.py  test_build_corpus.py  test_collate.py  test_cr_ctc.py  test_cr_ctc_wiring.py  test_crdnn.py  test_ctc_loss.py  test_dataset.py  test_denormalize.py  test_efficient_conformer.py  test_env.py  test_export.py  test_fast_conformer_bpe.py  test_greedy.py  test_inference.py  test_inference_model_dispatch.py  test_inference_utils.py  test_inter_ctc.py  test_kaggle_notebook_structural.py  test_lm.py  test_manifest.py  (+21 more)
(+66 files in other folders)
